# zoopfi

./: .env.example  .gitignore  .vercelignore  README.md  eslint.config.mjs  next.config.ts  package.json  render.yaml  tailwind.config.js
app/: globals.css  layout.tsx  manifest.ts  page.tsx  providers.tsx
app/business/: page.tsx
app/components/: AppNav.tsx  AuthRouter.tsx  CounterArena.tsx  DashboardLayout.tsx  LoginPage.tsx  Navbar.tsx  NotificationBell.tsx  PaymentRequestModal.tsx  QRCodeCard.tsx  QRScanner.tsx  Sidebar.tsx  ThemeToggle.tsx  Toast.tsx  WalletDropdown.tsx  counterItem.tsx  wallet-selection-modal.tsx
app/contacts/: page.tsx
app/context/: ThemeContext.tsx
app/dashboard/: page.tsx
app/groups/: page.tsx
app/history/: page.tsx
app/invoices/: page.tsx
app/lib/: api.ts  balance.ts  hooks.ts  nav.ts  noop.js  query.tsx  theme.ts  transfer.ts
app/onboarding/: page.tsx
app/private/: page.tsx
app/receive/: ReceivePageContent.tsx  page.tsx
app/rewards/: page.tsx
app/send/: SendPageContent.tsx  page.tsx
app/settings/: page.tsx
app/shielded/: page.tsx
app/swap/: page.tsx
app/transact/: TransactPageContent.tsx  page.tsx
app/vault/: page.tsx
backend/: .env.example  package-lock.json  package.json
backend/src/: index.ts
contracts/: .gitignore  README.md
contracts/counter/: Cargo.toml
contracts/counter/src/: lib.rs  test.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  test.rs
deployments/: testnet.json
docs/: idea-submission.md
public/: sw.js
public/js/: web.js  (+4 more)
scripts/: build-privacy-engine.sh
(+96 files in other folders)
