[package]
name = "vault"
version = "0.1.0"
edition = "2021"
description = "Zoopfi balance vault: deposit, internal transfer, and withdraw with on-chain events"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
